fix: Adjusted contact layout to better visibility

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,3 @@
-@import "https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Krona+One&display=swap";
-
 @import "splide-skyblue.min.scss";
 @import "./reset.scss";
 
@@ -528,7 +526,12 @@ section.carousel {
 }
 
 .contact {
-  background-image: url("../images/contact-background.jpg");
+  background:
+  linear-gradient(
+    rgba(0, 0, 0, 0.7), 
+    rgba(0, 0, 0, 0.7)
+  ),
+  url("../images/contact-background.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -554,11 +557,11 @@ section.carousel {
     }
 
     & h4 {
-      font-size: .875rem;
-      font-family: "Krona One", sans-serif;
+      font-size: 1rem;
+      font-family: "Inter Tight", sans-serif !important;
     }
 
-    &__opening-hours{
+    &__opening-hours {
       width: 275px;
       display: flex;
       flex-direction: column;
@@ -701,6 +704,10 @@ section.carousel {
       & .number {
         font-weight: bold;
         font-size: 1.125rem;
+      }
+
+      & span {
+        font-family: "Inter Tight", sans-serif !important;
       }
     }
 
